<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="80dp"
        android:layout_y="20dp"
        android:text="@string/information_panel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="125dp"
        android:text="@string/movement_amp_position"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="130dp"
        android:layout_y="170dp"
        android:text="Depth = 0.0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="130dp"
        android:layout_y="220dp"
        android:text="X = 0.0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="130dp"
        android:layout_y="245dp"
        android:text="Y = 0.0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="130dp"
        android:layout_y="270dp"
        android:text="Z = 0.0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="80dp"
        android:layout_y="350dp"
        android:text="@string/control_panel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_x="70dp"
        android:layout_y="500dp"
        android:text="@string/left"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_x="858dp"
        android:layout_y="562dp"
        android:text="@string/down"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_x="858dp"
        android:layout_y="462dp"
        android:text="@string/up"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_x="165dp"
        android:layout_y="500dp"
        android:text="@string/right"
        android:textSize="25dp" />

    <VideoView
        android:id="@+id/videoView1"
        android:layout_width="268dp"
        android:layout_height="196dp"
        android:layout_x="391dp"
        android:layout_y="120dp" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_x="508dp"
        android:layout_y="594dp"
        android:text="@string/togglebutton"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_x="630dp"
        android:layout_y="457dp"
        android:text="@string/go" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_x="510dp"
        android:layout_y="457dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="390dp"
        android:layout_y="467dp"
        android:text="@string/input_depth_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_x="520dp"
        android:layout_y="530dp"
        android:max="5"
        android:progress="1" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="390dp"
        android:layout_y="535dp"
        android:text="Speed Control:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="750dp"
        android:layout_y="125dp"
        android:text="@string/gyroscope_measurements"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="782dp"
        android:layout_y="175dp"
        android:text="Yaw   = 0.0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="782dp"
        android:layout_y="200dp"
        android:text="Pitch = 0.0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="782dp"
        android:layout_y="225dp"
        android:text="Roll   = 0.0"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_x="877dp"
        android:layout_y="19dp"
        android:text="Connect" />

</AbsoluteLayout>